--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,12 @@
 cmake_minimum_required(VERSION 2.8)
 project(LooseQuadtree CXX)
 enable_testing()
-add_compile_options(-std=c++11 -Wall -Wextra -Wconversion -pedantic -Werror)
+add_compile_options(-std=c++11 -Wall -pedantic)
+if(MSVC)
+#add_compile_options(/WX)
+else()
+add_compile_options(-Wextra -Wconversion -Werror)
+endif()
 #add_compile_options($<$<CONFIG:Debug>:-fsanitize=address>)
 #add_compile_options($<$<CONFIG:Debug>:-fsanitize=leak>)
 #add_compile_options($<$<CONFIG:Debug>:-fsanitize=undefined>)
